@@ -1,5 +1,10 @@
 2008-10-17	Brian Tarricone <bjt23@cornell.edu>
 
+	* xfce4-session/xfsm-manager.c: Don't ditch clients that fail
+	  to restart solely because fork() failed in xfce4-session.
+
+2008-10-17	Brian Tarricone <bjt23@cornell.edu>
+
 	* xfce4-session/ice-layer.c: Properly initialise a GError to
 	  NULL.  Patch from Carlos Santos (bug 4202).
 	* libxfsm/Makefile.am: Link all used libraries to libxfsm.so
